--- a/css/main.css
+++ b/css/main.css
@@ -50,7 +50,8 @@
     width: 40px;
     color: blanchedalmond;
     justify-content: center;
-    margin: 15px;
+    margin: auto;
+  
 
 }
 
@@ -69,7 +70,7 @@
     background-color: blanchedalmond;
     color: blanchedalmond;
     justify-content: center;
-    padding: 50px;
+    padding: 10px;
 
 }
 
